Fix: top header button alignment

--- a/app/addons/config/assets/scss/config.scss
+++ b/app/addons/config/assets/scss/config.scss
@@ -56,7 +56,7 @@
 }
 
 #add-option-button {
-  line-height: 40px;
+  line-height: 38px;
   cursor: pointer;
   border-left: 1px solid #cccccc;
   border-right: none;
