--- a/assets/scss/_notification-center.scss
+++ b/assets/scss/_notification-center.scss
@@ -12,7 +12,7 @@ body #dashboard #notification-center-btn {
   @include flex(0 0 auto);
 
   & > div {
-    padding: 20px 16px 16px;
+    padding: 18px 16px 10px 16px;
   }
   &:hover {
     color: $cf-brand-hightlight-hover;
